--- a/front/index.html
+++ b/front/index.html
@@ -6,7 +6,7 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>슬리액</title>
+    <title>통합암호관리</title>
     <style>
       html,
       body {
@@ -31,7 +31,6 @@
       href="https://a.slack-edge.com/bv1-9/client-boot-styles.dc0a11f.css?cacheKey=gantry-1613184053"
       crossorigin="anonymous"
     />
-    <link rel="shortcut icon" href="https://a.slack-edge.com/cebaa/img/ico/favicon.ico" />
     <link
       href="https://a.slack-edge.com/bv1-9/slack-icons-v2-16ca3a7.woff2"
       rel="preload"
