--- a/front/index.html
+++ b/front/index.html
@@ -6,7 +6,7 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>통합암호관리</title>
+    <title>IPM</title>
     <style>
       html,
       body {
@@ -26,6 +26,7 @@
         box-sizing: border-box;
       }
     </style>
+    <link rel="shortcut icon" href="/public/1804429.png" />
     <link
       rel="stylesheet"
       href="https://a.slack-edge.com/bv1-9/client-boot-styles.dc0a11f.css?cacheKey=gantry-1613184053"
